# agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  kittengrid.test.yml  kittengrid.yaml.example  kittengrid.yml
.github/workflows/: ci.yml  release-kittengrid-agent.yml  rust.yml
compose_rust/: Cargo.toml  LICENSE  README.md
compose_rust/src/: config.rs  main.rs
compose_rust/src/config/: blkio_config.rs  blkio_limit.rs  blkio_weight.rs  build.rs  config.rs  credential_spec.rs  depends_on.rs  healthcheck.rs  loader.rs  logging.rs  network.rs  project.rs  secret.rs  secret_ref.rs  service.rs  ulimits.rs  utils.rs  volume.rs
compose_rust/src/config/fixtures/: invalid-schema.yaml  invalid-yaml.yaml  service-with-configs.yaml  service-with-dependencies.yaml  service-with-entripoints.yaml  service-with-entrypoints.yaml  service-with-environments.yaml  service-with-secrets.yaml  service-with-sysctls.yaml  simple-project.yaml
docker/: Dockerfile  Dockerfile.dockerignore  entrypoint.sh  resolv.conf
docker/rootfs/: .bashrc  entrypoint.sh
docker/rootfs/etc/: bash.bashrc
examples/: test-spawn.rs
resources/test/: simple-compose-gone-wrong.yaml  simple-compose.yaml
resources/test/simple-repo/refs/heads/: main  other-branch
script/: build  refresh-container.sh
src/: api_error.rs  binary_utils.rs  compose.rs  config.rs  data_dir.rs  docker_compose.rs  endpoints.rs  git_manager.rs  kittengrid_agent.rs  kittengrid_api.rs  lib.rs  main.rs  persisted_buf_reader_broadcaster.rs  process_controller.rs  service.rs  state_dir.rs  test_utils.rs  ttyd.rs  utils.rs  wireguard.rs
src/compose/: context.rs  run.rs
src/endpoints/: compose.rs  services.rs  sys.rs
src/endpoints/public/: services.rs
src/log_generator/: main.rs
