[package]
name = "kittengrid-agent"
version = "0.1.0"
edition = "2021"
default-run = "kittengrid-agent"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "kittengrid-agent"
path = "src/main.rs"

[[bin]]
name = "log-generator"
path = "src/log_generator/main.rs"

[profile.release-with-debug]
inherits = "release"
debug-assertions = true

[dependencies]
log = "0.4"
clap = { version = "4.5.3", features = ["derive", "env"] }
clap-serde-derive = "0.2.1"
env_logger = "0.11.3"
bytes = "1"
rand = "0.8.5"

headers = "0.4"
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
tokio-util = "0.7.11"
once_cell = "1.19"
thiserror = "1.0"
tempfile = "3.10"
url = "2.5"
sha2 = "0.10"
arc-swap = "1.7"
reqwest = { version = "0.12", features = ["json"] }
boringtun = { version = "0.6.0", features = ["device"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
base64 = "0.22.1"
rtnetlink = "0.14.1"
futures = "0.3.11"
wireguard-rs   = { git = "https://github.com/kittengrid/wireguard-rs.git" }

[dependencies.x25519-dalek]
version = "^1.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
