[package]
name = "kittengrid-agent"
version = "0.1.0"
edition = "2021"
default-run = "kittengrid-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "kittengrid-agent"
path = "src/main.rs"

[[bin]]
name = "log-generator"
path = "src/log_generator/main.rs"

[profile.release-with-debug]
inherits = "release"
debug-assertions = true

[dependencies]
log = "0.4"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap-serde-derive = "0.2.1"
env_logger = "0.11.10"
bytes = "1"
rand = "0.10.1"

headers = "0.4"
axum = { version = "0.8.9", features = ["ws", "macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header", "with-rejection"] }

tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.10", features = ["fs", "trace"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.5"
tokio-util = "0.7.18"
once_cell = "1.21"
thiserror = "2.0"
tempfile = "3.27"
url = "2.5"
sha2 = "0.11"
arc-swap = "1.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"] } 
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.5"
base64 = "0.22.1"
futures = "0.3.32"
defguard_wireguard_rs = "0.9.6"
x25519-dalek = "2"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
regex = "1"

[dependencies.uuid]
version = "1.23.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dev-dependencies]
libc = "0.2.186"
tempfile = "3"

[build-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"] }
