[package]
name = "compose_rust"
version = "0.1.0"
edition = "2021"
description = "A Rust reference library for parsing and loading Compose files as specified by the Compose specification."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
void = "1.0.2"
jsonschema = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
thiserror = "1.0"
indexmap = {version = "1.9.1", features = ["serde-1"]}